syntax = "proto3";

package proto;
option go_package="/proto";

import "google/api/annotations.proto";

// Entities
message VoteStruct{
    string id = 1;
    string video = 2;
    string user = 3;
    bool upvote = 4;
}
// Requests
message InsertRequest{
    VoteStruct vote = 1;
}
message GetRequest{
    string id = 1;
}
message UpdateOneRequest{
    string id = 1;
    bool new_value = 2;
}
message DeleteOneRequest{
    string id = 1;
}
message ListVotesInVideoRequest{
    string id = 1;
}
message ListVotesOfUserRequest{
    string id = 1;
}
// Responses
message InsertResponse{
    string id = 1;
}
message GetResponse{
    VoteStruct vote = 1;
}
message UpdateOneResponse{
    int32 matched = 1;
    int32 modified = 2;
}
message DeleteOneResponse{
    int32 deleted = 1;
}
message ListVotesInVideoResponse{
    repeated VoteStruct vote = 1;
}
message ListVotesOfUserResponse{
    repeated VoteStruct vote = 1;
}
// Routes
service Vote{
    rpc ListVotesInVideo(ListVotesInVideoRequest) returns (ListVotesInVideoResponse) {
        option (google.api.http) = {
            get: "/v1/video/{id}"
        };
    }
    rpc ListVotesOfUser(ListVotesOfUserRequest) returns (ListVotesOfUserResponse) {
        option (google.api.http) = {
            get: "/v1/user/{id}"
        };
    }
    rpc Insert(InsertRequest) returns (InsertResponse) {
        option (google.api.http) = {
            post: "/v1"
            body: "*"
        };
    }
    rpc Get(GetRequest) returns (GetResponse) {
        option (google.api.http) = {
            get: "/v1/{id}"
        };
    }
    rpc UpdateOne(UpdateOneRequest) returns (UpdateOneResponse) {
        option (google.api.http) = {
            put: "/v1"
            body: "*"
        };
    }
    rpc DeleteOne(DeleteOneRequest) returns (DeleteOneResponse) {
        option (google.api.http) = {
            delete: "/v1/{id}"
        };
    }
}